package com.solita.devnotary.android.utils

object TestTags {
    /**AUTH FEAT*/
    const val SEND_LINK_BUTTON_TAG = "send_link_button"
    const val SIGN_OUT_BUTTON_TAG = "sign_out_button"
    const val TIMER_TAG = "timer_tag"
    const val PROFILE_TAB_BUTTON_TAG = "profile_tab_button_tag"

    /**NOTES FEAT*/
    const val NOTES_TAB_BUTTON_TAG = "notes_tab_button_tag"
    const val NOTE_PREVIEW_TAG = "notes_preview_tag"
    const val NOTE_PREVIEW_VIEW_NOTE_DETAILS_BUTTON_TAG =
        "NOTE_PREVIEW_VIEW_NOTE_DETAILS_BUTTON_TAG"

    const val ADD_NOTE_FAB_TAG = "add_note_fab_tag"
    const val NEW_NOTE_BUTTON_TAG = "new_notebuttontag"
    const val ADD_NOTE_BUTTON_TAG = "add_note_button_tag"
    const val DELETE_NOTE_BUTTON_TAG = "delete_note_button_tag"
    const val EDIT_NOTE_BUTTON_TAG = "edit_note_button_tag"
    const val SAVE_NOTE_BUTTON_TAG = "save_note_button_tag"
    const val TITLE_TEXT_FIELD_TAG = "titltE_textFieldTag"
    const val CONTENT_TEXT_FIELD_TAG = "contentTextFieldTag"
    const val NOTE_DETAIL_TITLE_TEXT_FIELD_TAG = "note_detail_title_tageldTag"
    const val NOTE_DETAIL_CONTENT_TEXT_FIELD_TAG = "note_detailscontentTextFieldTag"
    const val SEARCH_TEXT_FIELD_TAG =  "search_text_field_tag"
    const val NOTE_DETAILS_SCREEN = "note_details_screen"
    const val NOTE_INTERACTION_SCREEN = "note_interaction_screen"
    const val CONFIRM_DELETE_BUTTON_TAG = "CONFIRM_DELETE_BUTTON_TAG"
    const val NOTES_LIST_SCREEN = "NOTES_LIST_SCREEN1231"

}